traefik_v2/ingress/traefik-dashboard-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-dashboard-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: traefik.idocker.io
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik
          servicePort: 8080
